# celery_redis_example

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
celeryDjango/: admin.py  apps.py  service.py  tasks.py  views.py
celeryDjango/migrations/: 0001_initial.py
celeryProject/: celery.py  settings.py  urls.py
